<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="15dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="10dp"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_margin="@dimen/margin_between_elements"
    android:layout_gravity="center_horizontal">

    <ImageButton
        android:id="@+id/ib_del"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@null"
        android:elevation="2dp"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_baseline_delete_outline_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />
    <TextView
        android:id="@+id/className"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_name"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/margin_between_elements"/>
    <TextView
        android:id="@+id/section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/section_txt"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/className"
        android:layout_margin="@dimen/margin_between_elements"/>
    <TextView
        android:id="@+id/teacherName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teacher_name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/margin_between_elements"
        android:layout_marginBottom="@dimen/margin_between_elements"/>
</androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>